# cybrain_qa

./: .dockerignore  .env.db.example  .env.example  .env.production  .gitignore  Chatbot Fragen Struktur.docx  DEPLOYMENT_PLAN.md  DOCUMENTATION.md  Dockerfile  EXAMPLE_RESPONSE.md  IMPLEMENTATION_REPORT.md  README.md  TEST_REPORT.md  askpass.bat  cybrain.nginx  cybrain_backup.dump  cybrain_backup.sql  deploy.js  deploy.py  docker-compose.yml  hybrid-rag-prompts.md  hybrid_rag_chatbot_prd.md  index.html  input.txt  package-lock.json  package.json  pass.bat  pass.py  pg_restore.sh  postgres_setup.sh  pyproject.toml  qa_import.json  requirements.db.original.txt  requirements.txt  requirements_original.txt  server_setup.sh
backend/: .env  add_constraint.py  main.py  rag_chatbot_main.py  requirements.txt  run_embedding_worker.py
database/: alembic.ini  init_db.py
frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
scratch/: check_server_details.py  check_sops.py  check_tenant.py  check_users.py  debug_backend.py  deploy_continue.py  deploy_full.py  deploy_remote.sh  deploy_server.py  local_editor_db_latest.dump  local_editor_db_latest.sql  remote_postfix.py  run_remote_deploy.py  test_external_api.py  upload_ai_routes.py
scripts/: _deploy_patch.py  _drain_embedding_jobs.py  _hotfix.py  _rebuild.py  _server_probe_once.py  check_db.py  cybrain_hyluron_seed_rows.py  cybrain_it_ot_sop_bodies_de.py  deploy.sh  deploy_production.py  fix_server_db_from_env.py  hotpatch.sh  migrate_local_db_to_server.py  setup_server.sh  (+3 more)
(+206 files in other folders)
